--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model DigitalExaminationSys.ViewModels.LoginViewModel
+
+@{
     ViewData["Title"] = "Login";
 }
 
@@ -24,18 +26,20 @@ background: #eee;
                      class="img-fluid" alt="Phone image">
             </div>
             <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-                 <form action="@Url.Action("Index", "Student")" method="post">
+                 <form asp-controller="Home" asp-action="Login" method="post">
                 
                     <!-- Email input -->
-                    <div class="form-outline mb-4">
-                        <input type="email" id="form1Example13" class="form-control form-control-lg" />
-                        <label class="form-label" for="form1Example13">Email address</label>
+                    <div class="form-group form-outline mb-4">
+                    <label class="form-label" for="UserName">UserName</label>
+                    <input type="text" id="UserName" name="UserName" asp-for="UserName" class="form-control form-control-lg" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
                     </div>
 
                     <!-- Password input -->
-                    <div class="form-outline mb-4">
-                        <input type="password" id="form1Example23" class="form-control form-control-lg" />
-                        <label class="form-label" for="form1Example23">Password</label>
+                    <div class="form-group form-outline mb-4">
+                    <label class="form-label" for="Password">Password</label>
+                    <input type="password" id="Password" name="Password" asp-for="Password" class="form-control form-control-lg" />
+                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
 
 
