--- a/Views/Home/RegisterStudent.cshtml
+++ b/Views/Home/RegisterStudent.cshtml
@@ -1,72 +1,89 @@
-﻿@{
+﻿@model DigitalExaminationSys.ViewModels.RegisterationViewModel
+@{
     ViewData["Title"] = "RegisterStudent";
 }
 
-<p>Register Student</p>
 
 
-<section class="vh-100" style="background-color: #eee;">
-    <div class="container h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
+<section >
+    <div class="container ">
+        <div class="row d-flex justify-content-center align-items-center">
             <div class="col-lg-12 col-xl-11">
-                <div class="card text-black" style="border-radius: 25px;">
-                    <div class="card-body p-md-5">
+                <div class="card text-black" style="border-radius: 25px">
+                    <div class="card-body p-md-1">
                         <div class="row justify-content-center">
                             <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                                <p class="text-center h2 fw-bold mb-3 mx-1 mx-md-4" style=" font-family: 'Alkatra' , cursive;">Sign up Now!</p>
 
-                                <form class="mx-1 mx-md-4">
+                                <form class="mx-1 mx-md-1" asp-controller="Home" asp-action="RegisterStudent" method="post">
+                                    @Html.AntiForgeryToken()
 
-                                    <div class="d-flex flex-row align-items-center mb-4">
+                                    <div class="d-flex flex-row align-items-center mb-2">
                                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="text" id="form3Example1c" class="form-control" />
-                                            <label class="form-label" for="form3Example1c">Your Full Name</label>
+                                        <div class="form-group form-outline flex-fill mb-0">
+                                            <label class="form-label" for="UserName">Your UserName</label>
+                                            <input type="text" id="UserName" name="UserName" asp-for="UserName" class="form-control" />
+                                            <span asp-validation-for="UserName" class="text-danger"></span>
                                         </div>
                                     </div>
 
-                                    <div class="d-flex flex-row align-items-center mb-4">
+                                    <div class="d-flex flex-row align-items-center mb-2">
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="email" id="form3Example3c" class="form-control" />
-                                            <label class="form-label" for="form3Example3c">Your Email</label>
+                                        <div class=" form-group form-outline flex-fill mb-0">
+                                            <label class="form-label" for="Email">Your Email</label>
+                                            <input type="email" id="Email" name="Email" asp-for="Email" class="form-control" />
+                                            <span asp-validation-for="Email" class="text-danger"></span>
+
                                         </div>
                                     </div>
-                                        <div class="d-flex flex-row align-items-center mb-4">
+                                    <div class="d-flex flex-row align-items-center mb-2">
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="text" id="form3Example3c" class="form-control" />
-                                            <label class="form-label" for="form3Example3c">Your Phone Number</label>
+                                        <div class=" form-group form-outline flex-fill mb-0">
+                                            <label class="form-label" for="PhoneNumber">Your Phone Number</label>
+                                            <input type="text" id="PhoneNumber" name="PhoneNumber" asp-for="PhoneNumber" class="form-control" />
+                                            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+
+                                        </div>
+                                    </div>
+                                    <div class="d-flex flex-row align-items-center mb-2">
+                                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                                        <div class=" form-group form-outline flex-fill mb-0">
+                                            <label class="form-label" for="Address">Your Address</label>
+                                            <input type="text" id="Address" naame="Address" asp-for="Address" class="form-control" />
+                                            <span asp-validation-for="Address" class="text-danger"></span>
+
                                         </div>
                                     </div>
 
-                                    <div class="d-flex flex-row align-items-center mb-4">
+                                    <div class="d-flex flex-row align-items-center mb-2">
                                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="password" id="form3Example4c" class="form-control" />
-                                            <label class="form-label" for="form3Example4c">Password</label>
+                                        <div class=" form-group form-outline flex-fill mb-0">
+                                            <label class="form-label" for="Password">Password</label>
+                                            <input type="password" id="Password" name="Password" asp-for="Password" class="form-control" />
+                                            <span asp-validation-for="Password" class="text-danger"></span>
+
                                         </div>
                                     </div>
 
-                                    <div class="d-flex flex-row align-items-center mb-4">
+                                    <div class="d-flex flex-row align-items-center mb-2">
                                         <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="password" id="form3Example4cd" class="form-control" />
-                                            <label class="form-label" for="form3Example4cd">Repeat your password</label>
+                                        <div class=" form-group form-outline flex-fill mb-0">
+                                            <label class="form-label" for="ConfirmPassword">Repeat your password</label>
+                                            <input type="password" id="ConfirmPassword" name="ConfirmPassword" asp-for="ConfirmPassword" class="form-control" />
+                                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+
                                         </div>
                                     </div>
 
-                                    <div class="form-check d-flex justify-content-center mb-5">
-                                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
-                                        <label class="form-check-label" for="form2Example3">
-                                            I agree all statements in <a href="#!">Terms of service</a>
-                                        </label>
+                                    <div class="d-flex justify-content-center mx-4  mb-lg-4">
+                                        <button type="submit" class="btn btn-primary btn-md" style=" font-family: 'Alkatra' , cursive;width:150px">Register</button>
                                     </div>
 
-                                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                        <button type="button" class="btn btn-primary btn-lg">Register</button>
-                                    </div>
+                                    <p class="text-center text-muted mb-0" style=" font-family: 'Alkatra' , cursive;">
+                                        Have already an account? <a href="@Url.Action("Login", "Home")" class="fw-bold text-body"><u>Login here</u></a>
+                                    </p>
+
 
                                 </form>
 
@@ -84,3 +101,6 @@
         </div>
     </div>
 </section>
+
+
+
