--- a/Views/Shared/_ProfessorLayout.cshtml
+++ b/Views/Shared/_ProfessorLayout.cshtml
@@ -25,6 +25,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LogOut">Sign Out</a>
+                        </li>
+                    </ul>
+
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Index">Home</a>
@@ -37,6 +44,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Professor" asp-action="CreateExam">Create Exam</a>
                         </li>
                         
+                    </ul>
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold">@User.Identity.Name</a>
+                        </li>
                     </ul>
 
                 </div>
