--- a/Views/Shared/_StudentLayout.cshtml
+++ b/Views/Shared/_StudentLayout.cshtml
@@ -27,7 +27,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LogOut">Sign Out</a>
+                        </li>
+                    </ul>
+
+                    <ul class="navbar-nav flex-grow-2">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Index">Home</a>
                         </li>
@@ -39,6 +45,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="GetExam">Get Exam</a>
                         </li>
                         
+                    </ul>
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold">@User.Identity.Name</a>
+                        </li>
                     </ul>
 
                 </div>
