--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
         </main>
     </div>
 
-    <footer style=" background-color: rgb(200, 220, 240);" class="border-top footer text-muted">
+    <footer style=" background-color: rgb(200, 220, 240);" class="border-top footer text-dark">
         <div class="container">
             &copy; 2023 - DigitalExaminationSys - <a asp-area="" asp-controller="Home" asp-action="Index">Privacy</a>
         </div>
