--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -44,7 +44,7 @@ background: #eee;
 
 
                     <!-- Submit button -->
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+                <button type="submit" class="btn btn-primary btn-lg btn-block" style="font-family: 'Alkatra', cursive;">Sign in</button>
 
 
                 </form>
