--- a/Views/Shared/_ProfessorLayout.cshtml
+++ b/Views/Shared/_ProfessorLayout.cshtml
@@ -8,7 +8,9 @@
     <!-- Add these references to your HTML -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+kE3L5SWti1YU6A5Ls5D8l5JFdp" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+JfJ/5r5O5I5sw5f5QG5c5Bn5l5u5j5Y5j5E5d5E5I5f5K5l5" crossorigin="anonymous"></script>
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+kE3L5SWti1YU6A5Ls5D8l5JFdp" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"></script>
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DigitalExaminationSys.styles.css" asp-append-version="true" />
@@ -17,7 +19,7 @@
 </head>
 <body>
     <header >
-        <nav style=" background-color: rgb(200, 220, 240);" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+        <nav style=" background-color: rgb(200, 220, 240);" class="fixed-top navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a style="font-family: 'Alkatra', cursive;" class="navbar-brand" asp-area="" asp-controller="Professor" asp-action="Index">DigitalExaminationSys</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -28,11 +30,11 @@
 
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LogOut">Sign Out</a>
+                            <a class="nav-link text-light bg-danger border-danger rounded-2 fw-bold" asp-area="" asp-controller="Home" asp-action="LogOut">Sign Out</a>
                         </li>
                     </ul>
 
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-2">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Index">Home</a>
                         </li>
@@ -42,6 +44,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Professor" asp-action="CreateExam">Create Exam</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Professor" asp-action="Reports">Reports</a>
                         </li>
                         
                     </ul>
@@ -62,7 +67,7 @@
         </main>
     </div>
 
-    <footer style=" background-color: rgb(200, 220, 240);" class="border-top footer text-muted">
+    <footer style=" background-color: rgb(200, 220, 240);" class="border-top footer text-dark">
         <div class="container">
             &copy; 2023 - DigitalExaminationSys - <a asp-area="" asp-controller="Professor" asp-action="Index">Privacy</a>
         </div>
