--- a/Views/Shared/_StudentLayout.cshtml
+++ b/Views/Shared/_StudentLayout.cshtml
@@ -29,7 +29,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LogOut">Sign Out</a>
+                            <a class="nav-link text-light bg-danger border-danger rounded fw-bold" asp-area="" asp-controller="Home" asp-action="LogOut">Sign Out</a>
                         </li>
                     </ul>
 
@@ -63,7 +63,7 @@
         </main>
     </div>
 
-    <footer style=" background-color: rgb(200, 220, 240);" class="border-top footer text-muted">
+    <footer style=" background-color: rgb(200, 220, 240);" class="border-top footer text-dark">
         <div class="container">
             &copy; 2023 - DigitalExaminationSys - <a asp-area="" asp-controller="Student" asp-action="Index">Privacy</a>
         </div>
